<resources>
    <string name="app_name">ScoreKeeperApp</string>

    <!-- Titles -->
    <string name="title_rules">Rules</string>
    <string name="title_alert">Confirm Reset Scores</string>

    <!-- Button Labels -->
    <string name="btn_label_toss">Toss</string>
    <string name="btn_label_start">Start Match</string>
    <string name="btn_label_new">Start New Match</string>
    <string name="btn_label_reset">Reset</string>

    <!-- Information Text -->
    <string name="text_rules">
            Each team will get to play 5 overs\n
            Each over will consist of 6 balls\n
            Each team will have 11 players
    </string>
    <string name="text_teamA">Team A</string>
    <string name="text_teamB">Team B</string>
    <string name="text_start_score">0 / 0</string>
    <string name="text_start_overs">(0.0)</string>
    <string name="text_extras">Extras - %d</string>
    <string name="text_alert">Are you sure you want to reset all scores?</string>
    <string name="action_dialog_ok">ok</string>
    <string name="action_dialog_cancel">cancel</string>

    <!-- Spinner values -->
    <string name="prompt_team">Team to bat first&#160;&#160;  >> </string>
    <string-array name="array_team">
        <item>Team A</item>
        <item>Team B</item>
    </string-array>

    <!-- Messages -->
    <string name="msg_toss">%s has won the toss and will bat first</string>
    <string name="msg_current">%s is currently batting</string>
    <string name="msg_endgame">End of Game for %s</string>
    <string name="msg_result">%s is the winner of this match</string>
    <string name="msg_draw">This match has ended in a draw</string>

    <!-- Scores -->
    <string name="score_zero">+0 run</string>
    <string name="score_one">+1 run</string>
    <string name="score_two">+2 runs</string>
    <string name="score_three">+3 runs</string>
    <string name="score_four">+4 runs</string>
    <string name="score_six">+6 runs</string>
    <string name="score_wkt">wicket</string>
    <string name="score_noball">no ball</string>
    <string name="score_wide">wide</string>
</resources>
